src/objects/AF_Agency_Estimate__c.object
<CustomObject>
    <description>Will represent an agency base fee estimate for a particular brand and agency combination</description>
    <fields>
        <fullName>AF_1stSave__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tracks the first time a brand estimate is Approved. Used in Blue Icon logic</description>
        <label>1stSave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Adaptation_Local__c</fullName>
        <description>AgencyFee#GLOBAL#To Store adaptive local value</description>
        <label>Adaptation Local</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Adaptation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AgencyFee#GLOBAL#To Store adaptive value.</description>
        <label>Adaptation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Adjusted_estimate_1__c</fullName>
        <description>Calculate the value for qtr based on which qtr we are in and total value</description>
        <formula>IF(INCLUDES( AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c , &quot;Q4&quot;), 1, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q3&quot;), 0.75, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q2&quot;), 0.5, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q1&quot;), 0.25, 0)))) 
* AF_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted estimate 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Adjusted_estimate_2__c</fullName>
        <description>Calculate value based on previous value and current value</description>
        <formula>IF(ISBLANK(AF_Previous_PO_Value__c),null, AF_Quarter_PO_Raised__c - AF_Previous_PO_Value__c)</formula>
        <label>Adjusted estimate 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_AgencyEntityId__c</fullName>
        <formula>CASESAFEID(AF_Agency_Entity__r.AF_Agency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AgencyEntityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Category_Id__c</fullName>
        <description>This is used to provide Access to Agency Estiamte based on Category.</description>
        <formula>AF_Brand_Estimate__r.Brand__r.AF_Category_Brands__c</formula>
        <label>Agency Category Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Entity_Column_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To Store agency entity column name</description>
        <label>Agency Entity Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Entity_Name__c</fullName>
        <description>Stores the value of the Agency Name</description>
        <formula>AF_Agency_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the value of the Agency Country</description>
        <label>Agency Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AF_Entity__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agency Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>Agency Estimates (Agency Entity)</relationshipLabel>
        <relationshipName>Agency_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Exchange_Rate__c</fullName>
        <description>AgencyFee#GLOBAL#To Store agency exchange rates.</description>
        <label>Matrix Data Entry Exchange Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Spot_Rate__c</fullName>
        <description>AgencyFee#GLOBAL#To Store agency spot rate.</description>
        <label>Ready For PO Exchange Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency__c</fullName>
        <description>AgencyFee#GLOBAL#Created for the sharing Rules, To share Agency estimates related data to corresponding agency. Value will be populated using a trigger.</description>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To know whether the record is archived or not.</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Agency_Formula__c</fullName>
        <description>This is used in Bonus threshold.</description>
        <formula>CASESAFEID(AF_Agency_Entity__r.AF_Agency__c) +&apos;::&apos;+ CASESAFEID(AF_Brand_Id__c) +&apos;::&apos;+  text(AF_Unilever_Entity__r.AF_Country__c)  +&apos;::&apos;+ AF_Fiscal_Year__c</formula>
        <label>Bonus Agency Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_BrandEstimate_Active__c</fullName>
        <formula>AF_Brand_Estimate__r.AF_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandEstimate Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_BrandIdunique__c</fullName>
        <formula>CASESAFEID(AF_Brand_Estimate__r.Brand__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandIdunique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Estimate_Status__c</fullName>
        <description>Stores the Status of the Brand Estimate</description>
        <formula>Text(AF_Brand_Estimate__r.AF_Status_Base_Fees__c)</formula>
        <label>Brand Estimate Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Estimate__c</fullName>
        <description>AgencyFee#GLOBAL#To Store brand estimate.</description>
        <label>Brand Estimate</label>
        <referenceTo>AF_Brand_Estimate__c</referenceTo>
        <relationshipLabel>Agency Estimates</relationshipLabel>
        <relationshipName>Agency_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Id__c</fullName>
        <description>This is used in Agency Home page.</description>
        <formula>AF_Brand_Estimate__r.Brand__c</formula>
        <label>Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Logo__c</fullName>
        <description>This field will be used only for displaying Brand Logo on the Agency Home Page.</description>
        <label>Brand Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AF_Category_Finance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track changes by Cat Fin in approval process</description>
        <label>Category Finance Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Category__c</fullName>
        <description>AgencyFee#GLOBAL#Created for the sharing Rules, To share agency estimates based on the category.Field Value will be populated using a trigger.</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_CentralBillingMessage__c</fullName>
        <description>Stores Message to show on Base Fee Lightbox if entity is a Centrab Hub</description>
        <formula>if( AF_Unilever_Entity__r.IsCentralHub__c  &amp;&amp;  AF_Sum_of_Percent__c !=1.00 ,&apos;Central Billing Hub. Dont forget to go Country Breakdown Tab - And Add Breakdown&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CentralBillingMessage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_CentralBilling__c</fullName>
        <description>If Unilever Entity is a Central Hub - value stored in this field</description>
        <formula>AF_Unilever_Entity__r.IsCentralHub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CentralBilling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Comment_Type__c</fullName>
        <description>Type of Comment - with be Unilever and Agency Entity</description>
        <formula>left(AF_Unilever_Entity__r.Name,3) &amp; &quot;-&quot; &amp; left(AF_Agency_Entity__r.Name,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Compound_Key__c</fullName>
        <description>Key to uniquely identify this estimate - used in dataloading</description>
        <formula>AF_Brand_Estimate__r.AF_Fiscal_Year__c +&apos;|&apos;+CASESAFEID (AF_Agency_Entity__r.AF_Agency__c)+&apos;|&apos;+CASESAFEID (AF_Brand_Estimate__r.Brand__c)+&apos;|&apos;+AF_Agency_Entity_Name__c+&apos;|&apos;+AF_Unilever_Entity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compound Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Controller_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To Store whether the controller flag is raised or not.</description>
        <label>Controller Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_CountNoQuarters__c</fullName>
        <formula>case(AF_JustQuarters__c ,
&quot;Q1&quot;,1,
&quot;Q1Q2&quot;,2,
&quot;Q1Q3&quot;,3,
&quot;Q1Q4&quot;,4,
&quot;Q2&quot;,1,
&quot;Q2Q3&quot;,2,
&quot;Q2Q4&quot;,3,
&quot;Q3&quot;,1,
&quot;Q3Q4&quot;,2,
&quot;Q4&quot;,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountNoQuarters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Crossborder__c</fullName>
        <description>AgencyFee#GLOBAL#To Store crossborder value.</description>
        <label>% Crossborder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AF_DataLoadCheckCrossB__c</fullName>
        <description>Check for Data load. Total * ready for po exchange rate</description>
        <formula>AF_DataLoadCheck__c  /  AF_Agency_Spot_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataLoadCheckCrossB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_DataLoadCheckDiffCB__c</fullName>
        <description>Shows any differences between the locally converted figure and value calculate by trigger</description>
        <formula>AF_Total_Local__c -  AF_DataLoadCheckCrossB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataLoadCheckDiffCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_DataLoadCheckDiff__c</fullName>
        <description>Shows any differences between the locally converted figure and value calculate by trigger</description>
        <formula>AF_Total_Local__c -  AF_DataLoadCheck__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataLoadCheckDiff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_DataLoadCheck__c</fullName>
        <description>Check for Data load. Total * local exchange rate</description>
        <formula>AF_Total__c *  AF_Agency_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataLoadCheck</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To Store whether the estimate is delted or not.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Digital_Local__c</fullName>
        <description>AgencyFee#GLOBAL#To Storedigital local.</description>
        <label>Digital Local</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Digital_USD_Formula__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(AF_Agency_Spot_Rate__c)),AF_Agency_Spot_Rate__c!=0,NOT(ISBLANK(AF_Digital__c )), AF_Digital__c != 0,NOT(ISBLANK(AF_Agency_Exchange_Rate__c)),AF_Agency_Exchange_Rate__c!=0),(AF_Digital__c *AF_Agency_Exchange_Rate__c)/AF_Agency_Spot_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF_Digital_USD_Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Digital__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AgencyFee#GLOBAL#To Store Digital base fee.</description>
        <label>Digital</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_EntityExceptionsTotal__c</fullName>
        <description>Value of the Country Breakdown Total for Entity</description>
        <label>EntityExceptionsTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Estimates_don_t_match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To indicate that the estimations did not matched.</description>
        <label>Estimates don’t match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_External_key__c</fullName>
        <description>Used in Dataloading to uniquely identify the agency estimate</description>
        <externalId>true</externalId>
        <label>External key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year_FF__c</fullName>
        <formula>AF_Brand_Estimate__r.AF_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year FF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Fiscal year.</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorderImage__c</fullName>
        <description>Show Red Icon in Matrix for cross border transactions</description>
        <formula>if( AF_IsCrossborder__c , IMAGE( $Label.AF_AgencyUrlLink+&quot;/resource/AF_isTax&quot;, &quot;CrossBorder&quot; ,15,15) ,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCrossBorderImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossborder__c</fullName>
        <description>This field will be useful for cross border calculations in Agencyfee Application</description>
        <formula>IF( AND(TEXT(AF_Unilever_Entity__r.AF_Country__c) != TEXT(AF_Agency_Entity__r.AF_Country__c), AF_Total__c !=0)  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCrossborder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_IsEntityException__c</fullName>
        <description>Shows whether record has to have a Country Breakdown</description>
        <formula>if(AF_Unilever_Entity__r.IsCentralHub__c  ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsEntityException</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Is_Unilever_Central_Hub__c</fullName>
        <description>If Unilever Entity is a Central Hub - value stored in this field</description>
        <formula>AF_Agency_Entity__r.IsCentralHub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Unilever Central Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_JustQuarters__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( AF_Brand_Estimate__r.AF_BrandEstimateName__c, Brand__c, &quot;&quot;), Agency_Account__c ,&quot;&quot;), AF_Fiscal_Year__c ,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JustQuarters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_LC_Adaptation__c</fullName>
        <formula>AF_Agency_Exchange_Rate__c  *  AF_Adaptation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Adaptation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_LC_Digital__c</fullName>
        <formula>AF_Agency_Exchange_Rate__c *  AF_Digital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_LC_Total__c</fullName>
        <formula>AF_LC_Adaptation__c +  AF_LC_Digital__c +  AF_LC_Traditional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_LC_Traditional__c</fullName>
        <formula>AF_Agency_Exchange_Rate__c *  AF_Traditional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Traditional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To know whether the record is locked or not.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Matrix_Data_Entry_Currency__c</fullName>
        <description>AgencyFee#GLOBAL#To Store agency entity local currency.</description>
        <label>Matrix Data Entry Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Max_Quarter__c</fullName>
        <description>Used to work out latest quarter</description>
        <formula>IF(INCLUDES( AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c , &quot;Q4&quot;), &quot;Q4&quot;, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q3&quot;), &quot;Q3&quot;, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q2&quot;), &quot;Q2&quot;, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q1&quot;), &quot;Q1&quot;, null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Mean_Quarter__c</fullName>
        <formula>IF(INCLUDES( AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c , &quot;Q1&quot;), &quot;Q0&quot;, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q2&quot;), &quot;Q1&quot;, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q3&quot;), &quot;Q2&quot;, 
IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c, &quot;Q4&quot;), &quot;Q3&quot;, null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mean Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_No_Previous_POs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of Previous PO&apos;s Raised</description>
        <label>No Previous POs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_No_of_Estimates__c</fullName>
        <description>Used in a running sum for Reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Estimates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_No_of_Exceptions__c</fullName>
        <description>Count of no of Country Breakdowns</description>
        <label>No of Exceptions</label>
        <summaryForeignKey>AF_Entity_Exception__c.AF_Agency_Estimate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_No_of_Quaters__c</fullName>
        <description>Counts no of Quarter the agency estimate is for</description>
        <formula>IF(INCLUDES( AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c ,&apos;Q1&apos;),1,0) + IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c,&apos;Q2&apos;),1,0) + IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c,&apos;Q3&apos;),1,0) + IF(INCLUDES(AF_Brand_Estimate__r.AF_Basefee_Estimate_Initial_Quarter__c,&apos;Q4&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Quaters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_OOPs_Agency_Formula__c</fullName>
        <description>This is used in OOPS</description>
        <formula>AF_Agency_Entity__r.AF_Agency__c +&apos;::&apos;+ AF_Brand_Id__c +&apos;::&apos;+ AF_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OOPs Agency Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_OverridePO_Adaptation_LC__c</fullName>
        <description>This field is used to override the PO Adaptation value for the PO report</description>
        <label>Override PO Adaptation – LC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_OverridePO_Digital_LC__c</fullName>
        <label>Override PO Digital – LC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_OverridePO_Traditional_LC__c</fullName>
        <label>Override PO Traditional – LC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_PO_Number__c</fullName>
        <description>PO number from Ariba</description>
        <inlineHelpText>PO number from Ariba</inlineHelpText>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_PO_Report_Type__c</fullName>
        <formula>&quot;Base Fees&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Report Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_PO_Value__c</fullName>
        <description>Store PO number value</description>
        <label>PO Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_PO_Value__c</fullName>
        <description>Stores previous PO value - populated by raise new PO</description>
        <label>Previous PO Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_Quarter_Estimate__c</fullName>
        <description>Stores Previous Quarter Estimate</description>
        <label>Previous Quarter Estimate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_Quarters_Done__c</fullName>
        <description>Stores no of previous quarters done</description>
        <label>Previous Quarters Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quarter_PO_Raised__c</fullName>
        <description>Stores values of PO Value for this quarter</description>
        <formula>CASE(AF_Previous_Quarters_Done__c, 
0,  AF_Total__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1) , 
1, (AF_Total__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1))*0.25-  AF_Previous_PO_Value__c ,
2, (AF_Total__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1))*0.5-  AF_Previous_PO_Value__c ,
3, (AF_Total__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1))*0.75-  AF_Previous_PO_Value__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter PO Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quarter__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Quarter detials.</description>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AF_QuartersAlreadyDone__c</fullName>
        <formula>case( SUBSTITUTE(SUBSTITUTE(AF_JustQuarters__c, &quot; &quot;, &quot;&quot;),&quot;-&quot;,&quot;&quot;) , 
&quot;Q1&quot;,0, 
&quot;Q1Q2&quot;,0, 
&quot;Q1Q3&quot;,0, 
&quot;Q1Q4&quot;,0, 
&quot;Q2&quot;,1, 
&quot;Q2Q3&quot;,1, 
&quot;Q2Q4&quot;,1, 
&quot;Q3&quot;,2, 
&quot;Q3Q4&quot;,2, 
&quot;Q4&quot;,3,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuartersAlreadyDone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Rate_Currency__c</fullName>
        <description>AgencyFee#GLOBAL#To Store rate currency.</description>
        <label>Rate Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Rate_Type__c</fullName>
        <description>AgencyFee#GLOBAL#To Store rate type.</description>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Read_for_PO_Currency__c</fullName>
        <formula>if( AF_Agency_Spot_Rate__c=0 || AF_Agency_Spot_Rate__c=null, AF_Matrix_Data_Entry_Currency__c , AF_Ready_For_PO_Entry_Currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read for PO Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Ready_For_PO_Entry_Currency__c</fullName>
        <description>Currency used by agency unilever combination where values are  at Ready for po</description>
        <label>Ready For PO Entry Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Status__c</fullName>
        <description>AgencyFee#GLOBAL#To Store status.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Agency (Draft)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Category Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With CMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Sum_of_Percent__c</fullName>
        <description>Stores the sum of all % from entity exception - Country Breakdown</description>
        <label>Sum of Percent</label>
        <summarizedField>AF_Entity_Exception__c.AF_Value__c</summarizedField>
        <summaryForeignKey>AF_Entity_Exception__c.AF_Agency_Estimate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Sum_of_Value__c</fullName>
        <description>Stores the sum of all values from entity exception - Country Breakdown</description>
        <label>Sum of Value</label>
        <summarizedField>AF_Entity_Exception__c.AF_Value_Euro__c</summarizedField>
        <summaryForeignKey>AF_Entity_Exception__c.AF_Agency_Estimate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Total_Local__c</fullName>
        <description>Sum of Traditional , Digital and Adaptation converted to local currency</description>
        <formula>AF_Traditional_Local__c  +  AF_Digital_Local__c  +  AF_Adaptation_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_USD__c</fullName>
        <formula>AF_Digital_USD_Formula__c + Traditional_USD_Formula__c + Adaptation_USD_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total__c</fullName>
        <description>Sum of Traditional , Digital and Adaptation</description>
        <formula>AF_Traditional__c +  AF_Digital__c +  AF_Adaptation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Traditional_Local__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AgencyFee#GLOBAL#To Store traditional local.</description>
        <label>Traditional Local</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Traditional__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AgencyFee#GLOBAL#To Store traditional.</description>
        <label>Traditional</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_UnileverCountryName__c</fullName>
        <formula>text(AF_Unilever_Entity__r.AF_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UnileverCountryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity_Column_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Unilever entity column name.</description>
        <label>Unilever Entity Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity_Name__c</fullName>
        <description>Shows the Unilever Country Name</description>
        <formula>text(AF_Unilever_Entity__r.AF_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unilever Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To Store unilever entity.</description>
        <label>Unilever Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AF_Entity__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Unilever Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>Agency Estimates (Unilever entity)</relationshipLabel>
        <relationshipName>Agency_Estimates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Estimates__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Unilever estimates</description>
        <label>Unilever Estimates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_isChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if cell value has changed</description>
        <label>isChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_isChangedDateTime__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Tracks the time when cell value changed</description>
        <label>isChangedDateTime</label>
        <type>DateTime</type>
    </fields>
</CustomObject>